--- a/views/about.hbs
+++ b/views/about.hbs
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="/css/styles.css">
-  <script src="/js/app.js"></script>
-  <title>Express Weather App</title>
+  <title>About | Express Weather App</title>
 </head>
 
 <body>
-  <h1>Express Weather App</h1>
-  <p>This is a static file</p>
+  <h1>{{title}}</h1>
+  <p>This is the about page of the weather app</p>
+  <img src="/images/dancer-1904467_640.png" alt="">
 </body>
 
 </html>
