--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,13 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="/css/styles.css">
-  <title>About | Express Weather App</title>
+  <script src="/js/app.js"></script>
+  <title>Express Weather App</title>
 </head>
 
 <body>
-  <h1>About Page</h1>
-  <p>This is the about page of the weather app</p>
-  <img src="/images/dancer-1904467_640.png" alt="">
+  <h1>{{title}}</h1>
+  <h3>by: {{ name }}</h3>
+  <p>This is from handlebars</p>
 </body>
 
 </html>
