Create partials for header and footer

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-  <h1>{{title}}</h1>
-  <h3>by: {{ name }}</h3>
+  {{>header}}
   <p>This is from handlebars</p>
+  {{>footer}}
 </body>
 
 </html>
