--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="/css/styles.css">
-  <title>About | Express Weather App</title>
+  <title>Help | Express Weather App</title>
 </head>
 
 <body>
-  <h1>{{title}}</h1>
-  <p>This is the about page of the weather app</p>
-  <img src="/images/dancer-1904467_640.png" alt="">
+  {{>header}}
+  <p>This is the help page for the weather app</p>
+  {{>footer}}
 </body>
 
 </html>
