--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,9 +10,11 @@
 </head>
 
 <body>
-  {{>header}}
-  <p>This is the about page of the weather app</p>
-  <img src="/images/dancer-1904467_640.png" alt="">
+  <div class="main-content">
+    {{>header}}
+    <p>This is the about page of the weather app</p>
+    <img class="portrait" src="/images/dancer-1904467_640.png" alt="">
+  </div>
   {{>footer}}
 </body>
 
