--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,8 +11,10 @@
 </head>
 
 <body>
-  {{>header}}
-  <p>This is from handlebars</p>
+  <div class="main-content">
+    {{>header}}
+    <p>This is from handlebars</p>
+  </div>
   {{>footer}}
 </body>
 
