--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -5,12 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="/css/styles.css">
   <title>404 | Express Weather App</title>
 </head>
 
 <body>
-  {{>header}}
-  <p>{{error}}</p>
+  <div class="main-content">
+    {{>header}}
+    <p>{{error}}</p>
+  </div>
   {{>footer}}
 </body>
 
