--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -10,8 +10,10 @@
 </head>
 
 <body>
-  {{>header}}
-  <p>This is the help page for the weather app</p>
+  <div class="main-content">
+    {{>header}}
+    <p>This is the help page for the weather app</p>
+  </div>
   {{>footer}}
 </body>
 
