--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,10 +6,14 @@
 <body>
   <div class="main-content">
     {{>header}}
-    <p>This is from handlebars</p>
+    <p>Use this site to get your weather!</p>
+    <form>
+      <input type="text" placeholder="Search Weather for City">
+      <button type='submit'>Fetch Weather</button>
+    </form>
   </div>
-  <script src="/js/app.js"></script>
   {{>footer}}
+  <script src="/js/app.js"></script>
 </body>
 
 </html>
