Show fetched data on browser

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,6 +11,11 @@
       <input type="text" placeholder="Search Weather for City">
       <button type='submit'>Fetch Weather</button>
     </form>
+    <p id="loading"></p>
+    <p id="heading"></p>
+    <p id="temperature"></p>
+    <p id="precipitation"></p>
+    <p id="summary"></p>
   </div>
   {{>footer}}
   <script src="/js/app.js"></script>
