Shorten forecast display

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,9 +13,7 @@
     </form>
     <p id="loading"></p>
     <p id="heading"></p>
-    <p id="temperature"></p>
-    <p id="precipitation"></p>
-    <p id="summary"></p>
+    <p id="forecast"></p>
   </div>
   {{>footer}}
   <script src="/js/app.js"></script>
