Add content to About page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,6 +36,12 @@ header a {
   text-decoration: none;
 }
 
+p a {
+  color: #888888;
+  text-decoration: none;
+  font-weight: bold;
+}
+
 .portrait {
   height: 250px;
 }
