--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -6,7 +6,10 @@
 <body>
   <div class="main-content">
     {{>header}}
-    <p>This is the about page of the weather app</p>
+    <p>
+      A simple weather app that uses geo data from <a href="https://mapbox.com">Mapbox</a> and <a
+        href="https://darksky.net" class="">DarkSky</a>
+    </p>
     <img class="portrait" src="/images/dancer-1904467_640.png" alt="">
   </div>
   {{>footer}}
